Fixed overflow issue on todo created

--- a/app/globals.css
+++ b/app/globals.css
@@ -92,3 +92,8 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.overflow-wrap-break-word {
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
